# Graines-internship-reseach-2025

./: README.md  streamlit_app.py
SMdrone/IA/: README.md
SMdrone/IA/Vegetable-Image-Classifier/: AI TASK.ipynb  requirements.txt
SMdrone/IA/Vegetable-Image-Classifier/logs/train/: events.out.tfevents.1739291230.DESKTOP-I98MDPR.13168.0.v2
SMdrone/IA/Vegetable-Image-Classifier/logs/validation/: events.out.tfevents.1739292713.DESKTOP-I98MDPR.13168.1.v2
SMdrone/embeddedSystems/my_first_robot/: package.xml
SMdrone/embeddedSystems/my_first_robot/launch/: display.launch  gazebo.launch  gmapping.launch
SMdrone/embeddedSystems/my_first_robot/meshes/: base_link.STL  link_F.STL  link_LB.STL  link_RB.STL
SMdrone/embeddedSystems/my_first_robot/scripts/: robot_teleop.py  teleop_keyboard.py
SMdrone/embeddedSystems/my_first_robot/urdf/: my_first_robot.urdf
SMdrone/embeddedSystems/robot_description/: CMakeLists.txt  package.xml
SMdrone/embeddedSystems/robot_description/launch/: robot_gazebo.launch
SMdrone/embeddedSystems/robot_description/urdf/: robot.urdf
Sdrone/IA/: app.py
cleaningOcean/IA/: README.md
cleaningOcean/embeddedSystems/: Assemblage robot.SLDASM
saveEat/IA/: 1st task.ipynb
saveEat/embeddedSystems/2_wheeled_robot/: CMakeLists.txt
saveEat/embeddedSystems/2_wheeled_robot/config/: joint_names_2_wheeled_robot.yaml
saveEat/embeddedSystems/2_wheeled_robot/launch/: display.launch  frames.gv  gazebo.launch
saveEat/embeddedSystems/2_wheeled_robot/meshes/: base_link.STL  caster_wheel_Link.STL
saveEat/embeddedSystems/2_wheeled_robot/pyscript/: teleop_robot.py
saveEat/embeddedSystems/2_wheeled_robot/urdf/: 2_wheeled_robot.csv
saveEat/embeddedSystems/LouayBarraq/my_first_robot/: CMakeLists.txt
saveEat/embeddedSystems/LouayBarraq/my_first_robot/config/: diff_drive_controller.yaml  joint_names_my_first_robot.yaml
saveEat/embeddedSystems/LouayBarraq/my_first_robot/launch/: gazebo.launch
saveEat/embeddedSystems/LouayBarraq/my_first_robot/urdf/: my_first_robot.csv  my_first_robot.urdf
saveEat/embeddedSystems/Oussema_Ben_Abdelkader/2_wheeled_robot/: package.xml
saveEat/embeddedSystems/Oussema_Ben_Abdelkader/2_wheeled_robot/launch/: slam.launch
saveEat/embeddedSystems/Oussema_Ben_Abdelkader/2_wheeled_robot/meshes/: left_Link.STL  right_Link.STL
saveEat/embeddedSystems/Oussema_Ben_Abdelkader/2_wheeled_robot/urdf/: 2_wheeled_robot.urdf
