<package format="2">
  <name>2_wheeled_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for 2_wheeled_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for 2_wheeled_robot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>